# w2widget

./: .gitattributes  .gitignore  LICENSE  README.md  example.ipynb  generate_example_data.py  setup.cfg  test.ipynb  widget.py  widget_example.ipynb  workflow_example.ipynb
data/: TSNE_embedding.pkl  dv_model.pkl  dv_tsne_embedding.pkl  tokens_with_ws.pkl  wv_model.pkl  wv_tsne_embedding.pkl  wv_tsne_word_embedding.pkl
data/npr/: tokens_with_ws.pkl  wv_model.pkl  wv_tsne_embedding.pkl
src/: dv_tsne_embedding.pkl  example.ipynb  test.ipynb  test.json  tokens_with_ws.pkl
src/w2v_widget/: utils.py  widget.py
w2widget/: __init__.py  doc2vec  doc2vec.py  types.py  utils.py  widget.py
