[metadata]
name = w2widget
version = attr:w2widget.__init__.__version__
author = Tobias Gårdhus
author_email = tpg@sodas.ku.dk
description = Widget for exploring and sampling words from text data through w2v
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SODAS-KU/w2widget
project_urls =
    Bug Tracker = https://github.com/SODAS-KU/w2widget/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = w2widget
packages = find:
python_requires = >=3.7
install_requires =
    ipython
    ipywidgets
    plotly
    numpy
    gensim
    nltk
    scikit-learn
    openTSNE ==0.6.0

[options.packages.find]
where = w2widget